WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86866
[EFL] EFL port does not enable WEB_INTENTS_TAG flag
https://bugs.webkit.org/show_bug.cgi?id=86866
Summary
[EFL] EFL port does not enable WEB_INTENTS_TAG flag
Chris Dumez
Reported
2012-05-18 10:06:23 PDT
EFL port does not enable WEB_INTENTS_TAG flag which is needed by the following test: webintents/intent-tag.html
Attachments
Patch
(16.07 KB, patch)
2012-06-01 04:50 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.11 KB, patch)
2012-06-01 08:06 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.38 KB, patch)
2012-06-01 08:52 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-06-01 04:50:52 PDT
Created
attachment 145271
[details]
Patch
Raphael Kubo da Costa (:rakuco)
Comment 2
2012-06-01 07:06:09 PDT
Comment on
attachment 145271
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=145271&action=review
> Source/WebCore/CMakeLists.txt:2527 > + html/HTMLIntentElement.idl
We probably don't need this inside an IF(), as the code depends on ENABLE_WEB_INTENTS_TAG anyway.
> Source/WebCore/CMakeLists.txt:2535 > + html/HTMLIntentElement.cpp
Ditto.
Chris Dumez
Comment 3
2012-06-01 08:06:16 PDT
Created
attachment 145311
[details]
Patch Take rakuco's feedback into consideration.
Raphael Kubo da Costa (:rakuco)
Comment 4
2012-06-01 08:35:31 PDT
Looks fine to me.
Chris Dumez
Comment 5
2012-06-01 08:52:43 PDT
Created
attachment 145318
[details]
Patch Rebase on master after conflicting patch landed.
Chris Dumez
Comment 6
2012-06-01 08:56:33 PDT
$ Tools/Scripts/run-webkit-tests --efl webintents All 10 tests ran as expected. Yay :)
Greg Billock
Comment 7
2012-06-01 09:08:04 PDT
awesome! :-) (In reply to
comment #6
)
> $ Tools/Scripts/run-webkit-tests --efl webintents > All 10 tests ran as expected. > > Yay :)
WebKit Review Bot
Comment 8
2012-06-01 09:36:08 PDT
Comment on
attachment 145318
[details]
Patch Clearing flags on attachment: 145318 Committed
r119243
: <
http://trac.webkit.org/changeset/119243
>
WebKit Review Bot
Comment 9
2012-06-01 09:36:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug