[EFL] EFL port does not enable WEB_INTENTS_TAG flag https://bugs.webkit.org/show_bug.cgi?id=86866

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-06-01
Reviewed by Adam Barth.

.:

Enable WEB_INTENTS_TAG flag by default on EFL port.

* Source/cmake/OptionsEfl.cmake:
* Source/cmake/WebKitFeatures.cmake:
* Source/cmakeconfig.h.cmake:

Source/WebCore:

Fix compilation error when WEB_INTENTS_TAG flag is enabled.
HTMLElement::insertedInto() takes a ContainerNode* in argument, not a
Node*.

Test: webintents/intent-tag.html

* CMakeLists.txt:
* html/HTMLIntentElement.cpp:
(WebCore::HTMLIntentElement::insertedInto):
* html/HTMLIntentElement.h:
(HTMLIntentElement):

Source/WebKit/efl:

Implement registerIntentService() in EFL's FrameLoaderClient.
Emit a "intent,service,register" signal on the frame when a new Web
Intent service registers.

* WebCoreSupport/FrameLoaderClientEfl.cpp:
(WebCore):
(WebCore::FrameLoaderClientEfl::registerIntentService):
* WebCoreSupport/FrameLoaderClientEfl.h:
(FrameLoaderClientEfl):
* ewk/ewk_frame.cpp:
(ewk_frame_intent_service_register):
* ewk/ewk_frame.h:
* ewk/ewk_frame_private.h:

Tools:

Catch new "intent,service,register" signal on the frame and print out
information about the Web Intent service in EFL's DumpRenderTree.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::createView):
(DumpRenderTreeChrome::onFrameCreated):
(DumpRenderTreeChrome::onFrameIntentServiceRegistration):
* DumpRenderTree/efl/DumpRenderTreeChrome.h:
(DumpRenderTreeChrome):

LayoutTests:

Unskip webintents/intent-tag.html now that the WEB_INTENTS_TAG flag is
enabled by default on EFL port.

* platform/efl/test_expectations.txt:

Canonical link: https://commits.webkit.org/105922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119243 268f45cc-cd09-0410-ab3c-d52691b4dbfc