Tools/DumpRenderTree/efl/DumpRenderTreeChrome.h
@@ -122,6 +122,7 @@ private:
     static void onNewResourceRequest(void*, Evas_Object*, void*);
 
     static void onFrameIntentNew(void*, Evas_Object*, void*);
+    static void onFrameIntentServiceRegistration(void*, Evas_Object*, void*);
 };
 
 #endif // DumpRenderTreeChrome_h
