Source/cmakeconfig.h.cmake
@@ -75,6 +75,7 @@
 #cmakedefine01 ENABLE_WEBGL
 #cmakedefine01 ENABLE_WEB_AUDIO
 #cmakedefine01 ENABLE_WEB_INTENTS
+#cmakedefine01 ENABLE_WEB_INTENTS_TAG
 #cmakedefine01 ENABLE_WEB_SOCKETS
 #cmakedefine01 ENABLE_WEB_TIMING
 #cmakedefine01 ENABLE_WORKERS
